# axiom

./: .env.example  .gitignore  PLAN.md  README.md  firestore.rules  güncelleme  index.html  latest.json  package-lock.json  package.json  storage.rules  tailwind.config.js  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  winget.yml
mobile/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
mobile/src/: App.css  App.tsx
mobile/src-tauri/: .gitignore
mobile/src/components/: Sidebar.tsx
mobile/src/i18n/: index.ts
mobile/src/lib/: rtcClient.ts  session.ts
mobile/src/pages/: ChatList.tsx  ChatMenu.tsx  (+4 more)
scripts/: release.ps1
src/: App.css  App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/documents/: mod.rs
src-tauri/src/filesystem/: mod.rs
src-tauri/src/ipc/: commands.rs  mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/memory/: chats.rs  docs.rs  mod.rs
src-tauri/src/permissions/: engine.rs  error.rs  mod.rs  model.rs  store.rs
src-tauri/src/runtime/: error.rs  mod.rs  optimizer.rs  profiler.rs  provider.rs  registry.rs
src-tauri/src/runtime/cloud/: anthropic.rs  gemini.rs  mod.rs  openai.rs  types.rs
src-tauri/src/runtime/ollama/: client.rs  lifecycle.rs  mod.rs  types.rs
src-tauri/src/screen/: mod.rs
src-tauri/src/search/: currency.rs  mod.rs  weather.rs
src-tauri/src/settings/: mod.rs  model.rs  secrets.rs  store.rs
src-tauri/src/shell/: mod.rs
src-tauri/src/skills/: github.rs
src-tauri/src/tts/: edge.rs  mod.rs
src/hooks/: useBackgroundUpdater.ts  useCloudSync.ts  useFileDrop.ts  usePaletteBridge.ts  usePriceTracker.ts  useTTS.ts  useTaskScheduler.ts  useTelegramAutoMode.ts  useUpdater.ts  useVoiceConversation.ts  useVoiceInput.ts
src/i18n/: index.ts
src/lib/: agentLoop.ts  chatDb.ts  contextManager.ts  crypto.ts  envInfo.ts  ipc.ts  notify.ts  oauthProviders.ts  permissionUpdates.ts  priceScraper.ts  remoteHost.ts  rtcHost.ts  syncService.ts  telegramAccess.ts  toolRegistry.ts  zoom.ts
src/stores/: agentRunStore.ts  appStore.ts  approvalStore.ts  authStore.ts  chatStore.ts  codeStore.ts  documentStore.ts  mcpStore.ts  modelStore.ts  notificationStore.ts  optimizationStore.ts  priceTrackStore.ts  remoteStore.ts  settingsStore.ts  skillStore.ts  taskStore.ts  telegramStore.ts  uiStore.ts  updaterStore.ts  userProfileStore.ts
src/styles/: index.css
(+72 files in other folders)
